# Chat

./: .gitignore  Makefile  alembic.ini  docker-compose.yaml  pyproject.toml
config/: centrifugo.json  collector_config.yaml  default_log_conf.yaml  nats.conf  nginx.conf
config/filebeat/: filebeat.yml
config/logstash/: config.yml
config/logstash/pipelines/: service_stamped_json_logs.conf
config/prometheus/: prometheus.yml
migrations/: env.py
migrations/versions/: 2026-03-01-19-28-fe9642e7d89d_initial.py
src/app/: context.py  lifespan.py  main.py  setup.py
src/app/handlers/: exception_handlers.py
src/app/models/: __init__.py  admin.py  channel.py  channel_member.py  enums.py  message.py  user.py
src/app/providers/: config.py  db.py  logger.py  orm_manager.py  redis.py
src/app/repository/: meta.py
src/backend/: pyproject.toml
src/backend/app/: lifespan.py  main.py  setup.py
src/backend/app/api/admin/v1/users/: routes.py
src/backend/app/api/admin/v2/maintenance/: routes.py
src/backend/app/api/public/v1/base/: routes.py
src/backend/app/api/public/v1/centrifugo/: routes.py
src/backend/app/api/public/v1/channel/: routes.py
src/backend/app/api/public/v1/maintenance/: routes.py
src/backend/app/api/public/v1/message/: routes.py
src/backend/app/api/public/v1/users/: routes.py
src/backend/app/handlers/: exception_handlers.py  geo_ip_handler.py
src/backend/app/models/: __init__.py  admin.py  channel.py  channel_member.py  message.py  user.py
src/backend/app/providers/: db.py  orm_manager.py  redis.py
src/backend/app/providers/base/: provider_v1.py  provider_v2.py
src/backend/app/providers/centrifugo/: provider_v1.py
src/backend/app/providers/channel/: provider_v1.py
src/backend/app/providers/message/: provider_v1.py
src/backend/app/providers/user/: provider_v1.py
src/backend/app/repository/: meta.py
src/backend/app/repository/channel/: repository.py
src/backend/app/repository/channel_member/: repository.py
src/backend/app/repository/message/: repository.py
src/backend/app/repository/user/: repository.py
src/backend/app/services/base/: meta.py  service_v1.py  service_v2.py
src/backend/app/services/centrifugo/: meta.py  service_v1.py
src/backend/app/services/channel/: meta.py  service_v1.py
src/backend/app/services/message/: meta.py  service_v1.py
src/backend/app/services/user/: meta.py  service_v1.py
src/backend/app/static/css/: auth.css  chat.css
src/backend/app/templates/: auth.html  chat.html
src/backend/app/utils/: auth.py  current_user.py  templates.py
src/backend/common/exceptions/api/: __init__.py  empty_result_exception.py  password_exceptionx.py  server_exception.py  token_exceptions.py  user_exceptions.py
src/backend/common/exceptions/common/: __init__.py  connection_failed_exception.py
src/backend/common/helpers/logger/: json_formatter.py
src/backend/config/: main.py
src/backend/config/env_config/: app.py  base.py  db.py  nats.py  redis.py
src/backend/core/: adapters_loader.py  methods_map_loader.py  routes_loader.py
src/backend/core/cache/: key_builders.py
src/backend/core/logger/: __init__.py  logger_factory.py
src/backend/core/mailing/: manager.py
src/backend/core/nats/: client.py
src/backend/core/opentelemetry/: tracing.py
src/backend/core/redis/: client.py
src/backend/core/websocket/: native_manager.py  nats_socketio_manager.py  redis_socket_manager.py  redis_socketio_manager.py  socketio_manager.py
src/backend/database/: __init__.py
src/backend/database/sqlalchemy/: base.py  constants.py  session_manager.py  utils.py
src/backend/database/sqlalchemy/orm_manager/: __init__.py  manager.py  meta.py
src/backend/middleware/: cors_preflight_middleware.py  etag_middleware.py  exception_middleware.py  logger_middleware.py  maintenance_mode_middleware.py  monitor_performance.py  rate_limit_middleware.py  request_size_limit_middleware.py  security_header_posture_middleware.py  singleflight_dedup_middleware.py  stream_middleware.py  throttling_load_middleware.py  user_context_middleware.py
src/backend/schemas/channels/: channel_create.py  channel_get.py
src/backend/schemas/messages/: message_create.py  message_get.py  message_list.py
src/backend/schemas/users/: user_auth.py  user_get.py  user_register.py
src/backend/utils/: cascade_lifespans.py  cookie.py  crypto.py  csrf.py  hash.py  password.py  session.py
src/common/: complex_serializer.py  singleton.py
src/config/: main.py
src/core/: adapters_loader.py  methods_map_loader.py  routes_loader.py
src/database/: __init__.py
src/frontend/: env.d.ts  index.html  package-lock.json  package.json  vite.config.ts
src/middleware/: cdn_cache_control_middleware.py  conditional_middleware.py  etag_middleware.py  exception_middleware.py  logger_middleware.py  maintenance_mode_middleware.py  monitor_performance.py  rate_limit_middleware.py  request_id_middleware.py  singleflight_dedup_middleware.py  stream_middleware.py  swr_middleware.py  throttling_load_middleware.py  timeout_middleware.py  user_context_middleware.py
src/schemas/: base.py
src/utils/: crypto.py  csrf.py  password.py  session.py  shortuuid.py  tracing.py
srv/backend/: Dockerfile
srv/frontend/: .dockerignore  Dockerfile
srv/manager/: Dockerfile
(+78 files in other folders)
